fix(sonar): corregir code smells S8688, S3776, S106 en asignaciones, tickets, usuarios y zonas
- S8688: reemplazar OffsetDateTime.now()/LocalDateTime.now() sin ZoneId por
  OffsetDateTime.now(ZoneId.of("America/Guayaquil")) en todos los modulos
- S3776: extraer aplicarCambioEstado() en AssignmentService para reducir
  complejidad cognitiva de modificarAsignacion() por debajo del limite de 15
- S106: reemplazar System.out.println con log.info/log.warn usando @Slf4j en
  ZonaCicloVidaMain